fin home grid layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
   </head>
 
   <body>
-    <h1 class="hi">hi</h1>
+    <div class="home-grid">
+      <nav class="nav">
+        <img src="images/logo.svg" alt="" class="logo" />
+        <ul class="nav__list">
+          <li class="nav__list-item">Features</li>
+          <li class="nav__list-item">Pricing</li>
+          <li class="nav__list-item">Resources</li>
+        </ul>
+      </nav>
+      <header class="header">header</header>
+      <section class="section-about">about</section>
+      <section class="section-cta">CTA</section>
+      <footer class="footer">footer</footer>
+    </div>
+
     <!-- Features
   Pricing
   Resources
