finished nav bar

--- a/index.html
+++ b/index.html
@@ -17,16 +17,40 @@
   </head>
 
   <body>
-    <div class="home-grid">
+    <div class="home">
       <nav class="nav">
-        <img src="images/logo.svg" alt="" class="logo" />
+        <img src="images/logo.svg" alt="logo" class="logo u-margin-right" />
         <ul class="nav__list">
-          <li class="nav__list-item">Features</li>
-          <li class="nav__list-item">Pricing</li>
-          <li class="nav__list-item">Resources</li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Features</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Resources</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Login</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="btn btn--small">Sign Up</a>
+          </li>
         </ul>
       </nav>
-      <header class="header">header</header>
+      <header class="header">
+        <h1 class="heading-1">More than just shorter links</h1>
+        <p class="paragraph">
+          Build your brand’s recognition and get detailed insights on how your
+          links are performing.
+        </p>
+        <a href="#" class="btn">Get Started</a>
+        <img
+          src="images/illustration-working.svg"
+          alt="illustration-working"
+          class="header__svg"
+        />
+      </header>
       <section class="section-about">about</section>
       <section class="section-cta">CTA</section>
       <footer class="footer">footer</footer>
