--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </head>
 
   <body>
-    <div class="home">
+    <div class="home u-mx-auto">
       <nav class="nav">
-        <img src="images/logo.svg" alt="logo" class="logo u-margin-right" />
+        <img src="images/logo.svg" alt="logo" class="logo u-mr-md" />
         <ul class="nav__list">
           <li class="nav__item">
             <a href="#" class="nav__link">Features</a>
@@ -39,10 +39,13 @@
         </ul>
       </nav>
       <header class="header">
-        <h1 class="heading-1">More than just shorter links</h1>
+        <h1 class="heading-1">
+          More than just <br />
+          shorter links
+        </h1>
         <p class="paragraph">
-          Build your brand’s recognition and get detailed insights on how your
-          links are performing.
+          Build your brand’s recognition and get detailed <br />
+          insights on how your links are performing.
         </p>
         <a href="#" class="btn">Get Started</a>
         <img
@@ -50,6 +53,10 @@
           alt="illustration-working"
           class="header__svg"
         />
+        <form class="url-shortner">
+          <input type="url" class="url-shortner__input" />
+          <input type="submit" value="Shorten it!" class="btn btn-secondary" />
+        </form>
       </header>
       <section class="section-about">about</section>
       <section class="section-cta">CTA</section>
