--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           More than just <br />
           shorter links
         </h1>
-        <p class="paragraph">
+        <p class="paragraph u-fs-2">
           Build your brand’s recognition and get detailed <br />
           insights on how your links are performing.
         </p>
@@ -54,12 +54,34 @@
           class="header__svg"
         />
         <form class="url-shortner">
-          <input type="url" class="url-shortner__input" />
-          <input type="submit" value="Shorten it!" class="btn btn-secondary" />
+          <input
+            type="url"
+            class="url-shortner__input"
+            placeholder="Shorten a link here..."
+          />
+          <input type="submit" value="Shorten it!" class="btn u-radius-1" />
         </form>
       </header>
-      <section class="section-about">about</section>
-      <section class="section-cta">CTA</section>
+      <section class="section-features">
+        <h2 class="heading-2 heading-2--dark">Advanced Statistics</h2>
+        <p class="paragraph u-fs-1">
+          Track how your links are performing across the web with <br />
+          our advanced statistics dashboard.
+        </p>
+        <div class="feature-box">
+          <img
+            src="images/icon-brand-recognition.svg"
+            alt="icon-brand-recognition"
+            class="feature__svg"
+          />
+          <h3 class="heading-3">Brand Recognition</h3>
+          <p class="paragraph">
+            Boost your brand recognition with each click. Generic links don’t
+            mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
+      </section>
+      <section class="section-boost">CTA</section>
       <footer class="footer">footer</footer>
     </div>
 
