--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           More than just <br />
           shorter links
         </h1>
-        <p class="paragraph u-fs-2">
+        <p class="paragraph u-fs-1 u-lh-lg">
           Build your brand’s recognition and get detailed <br />
           insights on how your links are performing.
         </p>
@@ -64,21 +64,55 @@
       </header>
       <section class="section-features">
         <h2 class="heading-2 heading-2--dark">Advanced Statistics</h2>
-        <p class="paragraph u-fs-1">
+        <p class="paragraph u-fs-2 u-center-text u-lh-md u-pt-sm">
           Track how your links are performing across the web with <br />
           our advanced statistics dashboard.
         </p>
-        <div class="feature-box">
-          <img
-            src="images/icon-brand-recognition.svg"
-            alt="icon-brand-recognition"
-            class="feature__svg"
-          />
-          <h3 class="heading-3">Brand Recognition</h3>
-          <p class="paragraph">
-            Boost your brand recognition with each click. Generic links don’t
-            mean a thing. Branded links help instil confidence in your content.
-          </p>
+        <div class="feature-container">
+          <div class="feature feature-1">
+            <div class="icon-container">
+              <img
+                src="images/icon-brand-recognition.svg"
+                alt="icon-brand-recognition"
+                class="feature__icon"
+              />
+            </div>
+            <h3 class="heading-3 u-mb-sm">Brand Recognition</h3>
+            <p class="paragraph u-lh-sm">
+              Boost your brand recognition with each click. Generic links don’t
+              mean a thing. Branded links help instil confidence in your
+              content.
+            </p>
+          </div>
+          <div class="feature feature-2">
+            <div class="icon-container">
+              <img
+                src="images/icon-detailed-records.svg"
+                alt="icon-brand-recognition"
+                class="feature__icon"
+              />
+            </div>
+            <h3 class="heading-3 u-mb-sm">Detailed Records</h3>
+            <p class="paragraph u-lh-sm">
+              Gain insights into who is clicking your links. Knowing when and
+              where people engage with your content helps inform better
+              decisions.
+            </p>
+          </div>
+          <div class="feature feature-3">
+            <div class="icon-container u-pl-sm">
+              <img
+                src="images/icon-fully-customizable.svg"
+                alt="icon-brand-recognition"
+                class="feature__icon"
+              />
+            </div>
+            <h3 class="heading-3 u-mb-sm">Fully Customizable</h3>
+            <p class="paragraph u-lh-sm">
+              Improve brand awareness and content discoverability through
+              customizable links, supercharging audience engagement.
+            </p>
+          </div>
         </div>
       </section>
       <section class="section-boost">CTA</section>
