--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </div>
       </section>
-      <section class="section-boost">CTA</section>
+      <section class="section-boost"></section>
       <footer class="footer">footer</footer>
     </div>
 
