section boost completed

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
           </div>
         </div>
       </section>
-      <section class="section-boost"></section>
+      <section class="section-boost">
+        <h2 class="heading-2 heading-2--light u-mb-sm">
+          Boost your links today
+        </h2>
+        <a href="#" class="btn">Get Started</a>
+      </section>
       <footer class="footer">footer</footer>
     </div>
 
