--- a/index.html
+++ b/index.html
@@ -121,68 +121,85 @@
         </h2>
         <a href="#" class="btn">Get Started</a>
       </section>
-      <footer class="footer">footer</footer>
+      <footer class="footer">
+        <h2 class="heading-2 heading-2--light">Shortly</h2>
+        <nav class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__item">Features</li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Link Shortening </a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Branded Links </a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Analytics</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">Resources</li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Blogs</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Developers</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Support</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">Company</li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">About</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Our Team</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Careers</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Contact</a>
+            </li>
+          </ul>
+          <ul class=" social-media social-media-list">
+            <li class="social-media__item">
+              <a href="#" class="social-media__link">
+                <img
+                  src="images/icon-facebook.svg"
+                  alt="facebook"
+                  class="social-m__icon"
+                />
+              </a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link">
+                <img
+                  src="images/icon-twitter.svg"
+                  alt="twitter"
+                  class="social-media__icon"
+              /></a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link">
+                <img
+                  src="images/icon-pinterest.svg"
+                  alt="pinterest"
+                  class="social-media__icon"
+              /></a>
+            </li>
+            <li class="social-media__item">
+              <a href="#" class="social-media__link">
+                <img
+                  src="images/icon-instagram.svg"
+                  alt="instagram"
+                  class="social-media__icon"
+              /></a>
+            </li>
+          </list
+        </nav>
+      </footer>
     </div>
-
-    <!-- Features
-  Pricing
-  Resources
-
-  Login
-  Sign Up
-
-  More than just shorter links
-
-  Build your brand’s recognition and get detailed insights
-  on how your links are performing.
-
-  Get Started
-
-  Shorten a link here...
-
-  Shorten It!
-
-  Advanced Statistics
-
-  Track how your links are performing across the web with our
-  advanced statistics dashboard.
-
-  Brand Recognition
-
-  Boost your brand recognition with each click. Generic links don’t
-  mean a thing. Branded links help instil confidence in your content.
-
-  Detailed Records
-
-  Gain insights into who is clicking your links. Knowing when and where
-  people engage with your content helps inform better decisions.
-
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact -->
   </body>
 </html>
