home page complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
@@ -163,41 +169,28 @@
               <a href="#" class="footer__link">Contact</a>
             </li>
           </ul>
-          <ul class=" social-media social-media-list">
+          <ul class="social-media social-media-list">
             <li class="social-media__item">
               <a href="#" class="social-media__link">
-                <img
-                  src="images/icon-facebook.svg"
-                  alt="facebook"
-                  class="social-m__icon"
-                />
+                <i class="fab fa-facebook-square social-media__icon"></i>
               </a>
             </li>
             <li class="social-media__item">
               <a href="#" class="social-media__link">
-                <img
-                  src="images/icon-twitter.svg"
-                  alt="twitter"
-                  class="social-media__icon"
-              /></a>
+                <i class="fab fa-twitter social-media__icon"></i>
+              </a>
             </li>
             <li class="social-media__item">
               <a href="#" class="social-media__link">
-                <img
-                  src="images/icon-pinterest.svg"
-                  alt="pinterest"
-                  class="social-media__icon"
-              /></a>
+                <i class="fab fa-pinterest social-media__icon"></i>
+              </a>
             </li>
             <li class="social-media__item">
               <a href="#" class="social-media__link">
-                <img
-                  src="images/icon-instagram.svg"
-                  alt="instagram"
-                  class="social-media__icon"
-              /></a>
+                <i class="fab fa-instagram social-media__icon"></i>
+              </a>
             </li>
-          </list
+          </ul>
         </nav>
       </footer>
     </div>
